# rail_track_api

./: README.md  docker-compose.yml  pyproject.toml
app/: .env.template  alembic.ini  main.py
app/api_v1/: __init__.py  dependencies.py
app/api_v1/endpoints/: address.py  station.py  train.py  train_type.py
app/core/: __init__.py  config.py
app/db/: __init__.py  base.py  fill_db.py  session.py
app/db/models/: address.py  crew_directory.py  personnel.py  position.py  route.py  route_detail.py  station.py  stations.py  train.py  train_station_association.py  train_type.py
app/db/repositories/: __init__.py  address_repository.py  station_repository.py  train_repository.py  train_type_repository.py
app/dependencies/: address.py  station.py
app/migration/: env.py
app/migration/versions/: 2443c2d16c82_create_route_details_table.py  46314420cf85_create_addresses_table.py  4a662489f2ad_updated_the_name_train_station_.py  4c6da7939516_create_personnel_table.py  60f66351e315_create_positions_table.py  665cbad1038e_delete_station_id_foreign_key.py  7c6b586b5f55_create_train_types_table.py  8a1994d22157_create_routes_table.py  8f0e61941c72_create_crew_directories_table.py  cf7c943a2010_create_stations_table.py  d58957ea71ed_create_trains_table.py  e8adec54cd87_updated_the_relationship_between_the_.py
app/schemas/: address.py  station.py  train.py  train_type.py
app/services/: __init__.py  address.py  station.py  train.py  train_type.py
app/utils/: repository.py  service.py
frontend/src/: App.js  styles.css
frontend/src/components/: AddAddress.js  Home.js  (+5 more)
