[tool.poetry]
name = "rail-track-api"
version = "0.1.0"
description = ""
authors = ["Andrey Melchikov <andrei.melchikov25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
sqlalchemy = "^2.0.35"
asyncpg = "^0.29.0"
alembic = "^1.13.3"
pydantic = "^2.9.2"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.5.2"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
